contrast solved for retailsPrice

--- a/src/components/wrappers/ExpensiveLoading.css
+++ b/src/components/wrappers/ExpensiveLoading.css
@@ -1,8 +1,8 @@
 .loading-text{
-    font-size: 100px;
-    font-family: "Fantasy";
+    font-size: 60px;
+    font-family: "fantasy";
 }
 
 .loading-gif{
-    font-size: 80px;
+    font-size: 40px;
 }
